Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-21067

Mistake in Qt documentation

XMLWordPrintable

    • 1575462bf90851fb134db4892e93c04b396543f1

      Mistake in the documentation. Type "double" and values "String" not compatible ..
      @
      12345 QVector<double> vect;
      vect << "red" << "green" << "blue" << "black";
      QList<double> list = vect.toList();
      // list: ["red", "green", "blue", "black"]
      @

      http://developer.qt.nokia.com/forums/viewthread/9075/

      http://doc.qt.nokia.com/4.8-snapshot/qvector.html#toList

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            cvandonderen Casper van Donderen
            mrtc3 Murat Ceven
            Votes:
            2 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes