Various qt documentation fixes (wk 40&41)

Fixes for bugs: QTBUG-21067, QTBUG-17025, QTBUG-11489, QTBUG-20069,
QTBUG-3563, QTBUG-20089, QTBUG-13983, QTBUG-11820, QTBUG-14732,
QTBUG-14521, QTBUG-9675, QTBUG-18313, QTBUG-18313, QTBUG-11312,
QTBUG-17739, QTBUG-7678, QTBUG-14759, QTBUG-14756, QTBUG-14677,
QTBUG-16164, QTBUG-20721, QTBUG-15562, QTBUG-17029 and QTBUG-18544.